FIX: In ProcessUtils, execToString now call /bin/sh -c when executing a command. This allow to use pipes and other built-in shell functionalities.